<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:id="@+id/drawer_group_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_home_menu"
            android:icon="@drawable/ic_toolbar_home"
            android:title="@string/home_menu" />
        <item
            android:id="@+id/drawer_profile"
            android:icon="@drawable/ic_user"
            android:title="@string/profile" />
        <item
            android:id="@+id/drawer_tournaments"
            android:icon="@drawable/ic_tournament"
            android:title="@string/tournaments" />
    </group>

    <group android:id="@+id/drawer_group_middle"
        android:checkableBehavior="none">
        <item
            android:id="@+id/drawer_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/drawer_theme_switch"
            android:checkable="false"
            android:icon="@drawable/ic_night_mode"
            android:title="@string/switch_night_mode"
            app:actionLayout="@layout/theme_switch" />
    </group>

    <group android:id="@+id/drawer_group_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/drawer_logout"
            android:icon="@drawable/ic_log_out"
            android:title="@string/log_out" />
    </group>

</menu>