<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".menus.MainMenuFragment">

    <Button
        android:id="@+id/button_create_tournament"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:text="@string/tournament_create"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_profile"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_profile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@color/colorAccent"
        android:text="@string/profile"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_create_tournament"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_create_tournament"
        app:layout_constraintTop_toTopOf="@+id/button_create_tournament"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_tournaments"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"
        android:text="@string/tournaments"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/button_create_tournament"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button_create_tournament"
        app:layout_constraintTop_toBottomOf="@+id/button_create_tournament" />

    <Button
        android:id="@+id/button_exit"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"
        android:text="@string/exit"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/button_profile"
        app:layout_constraintStart_toStartOf="@+id/button_profile"
        app:layout_constraintTop_toBottomOf="@+id/button_profile" />

</android.support.constraint.ConstraintLayout>